<resources>
    <string name="app_name">Quản Lý Phòng Trọ - Nhóm 9</string>
    <string name="add_room">Thêm Phòng</string>
    <string name="edit_room">Sửa Phòng</string>
    <string name="room_name_hint">Tên phòng</string>
    <string name="room_price_hint">Giá phòng</string>
    <string name="tenant_name_hint">Tên người thuê</string>
    <string name="phone_hint">Số điện thoại</string>
    <string name="status_label">Trạng thái:</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="msg_fill_all">Vui lòng điền đầy đủ thông tin!</string>
    <string name="msg_success">Lưu thành công!</string>
    <string name="msg_error">Có lỗi xảy ra!</string>
    <string name="status_available">Trống</string>
    <string name="status_rented">Đã thuê</string>
</resources>